Fix some alignments

--- a/src/components/LoginStyle.css
+++ b/src/components/LoginStyle.css
@@ -1,14 +1,13 @@
-#login-page {
-    margin-top: 170px;
-
-}
-
 .apo {
     font-size: 2.25rem;
 }
 
 #login-button {
-    width: 10px;
-    margin-left: 590px;
+    display: flex;
+    justify-content: center;
+}
 
+#login-page {
+    margin-top: 10%;
+    text-align: center;
 }
